# krita.js

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  kritajs.c  kritajs.desktop  package-lock.json  package.json  test.py
kritajs/: kritajs.py  minimal.htm
kritajs/lib/sciter/: window.py
kritajs/lib/sciter/capi/: scapi.py
src/: kritajs.json  main.py  plugin.cpp  plugin.h
src/backend/src/: plugin.cpp  renderer.h
src/backend/src/binding/: binding.cpp
src/frontend/: package-lock.json  package.json  tsconfig.json
src/frontend/public/: index.html
src/frontend/src/: app.tsx  ipc.ts
src/loader/: .gitignore  loader.cpp
src/loader/libkis/: Krita.h
src/manager/: README.md  package-lock.json  package.json
src/manager/public/: index.html
src/manager/src/: app.tsx
src/plugin/: .gitignore  binding.cpp  binding.h  plugin.cpp  qt_meta_object_proxy.h  renderer.cpp  renderer.h  view.cpp  view.h
src/plugin/binding/: binding.cpp  binding.h  q_object_proxy.cpp  q_object_proxy.h  qt_meta_object_proxy.cpp  qt_meta_object_proxy.h
src/plugin/kritajs/: __init__.py  kritajs.py
src/plugin/src/: krita.h  plugin.cpp  renderer.cpp  view.cpp  view.h
src/plugin_manager/: package-lock.json  package.json
src/plugin_manager/public/: index.html
src/plugin_manager/src/: app.tsx
src/wrapper/: .gitignore  kritajs.desktop
src/wrapper/src/: __init__.py
tools/bindgen/: .gitignore  README.md  bindgen.py  requirements.txt
tools/bindgen/src/: Class.py  TS_Class.py  bindgen-ts.py  bindgen.py  generate_header.py  generate_ts.py  parse.py  preprocess.py  utils.py
tools/bindgen/src/generators/header/: generator.py  header_generator.py
tools/bindgen/src/generators/typescript/: bindgen-ts.py  generate_ts.py  ts_class.py  typescript_generator.py
